styling for child and parent view, date added to reading tracker, fixed book covers on reading tracker

--- a/react/public/css/global.css
+++ b/react/public/css/global.css
@@ -44,7 +44,7 @@ main {
     grid-area: header;
     background-color: #ffffff;
     padding: 5px;
-    word-spacing: 20px;
+    word-spacing: 15px;
 
 }
 
